try to fix the edge gap when open in safari

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
-body {
+html, body {
+    width: 100%;
     height: 100%;
-    margin: 0;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 /*css for part 1 of html */
 .part1 {
